fixed orders page name z-index

--- a/src/app/modules/app-orders/components/orders-page/orders-page.component.css
+++ b/src/app/modules/app-orders/components/orders-page/orders-page.component.css
@@ -74,6 +74,7 @@ table td:hover, table th:hover {
     height: 40px;
     background-color: white;
     letter-spacing: 0.8rem;
+    z-index: 1035;
 }
 
 .no-borders {
